Создание компонентов mainSection и table card

--- a/FootballApp/src/app/app.component.html
+++ b/FootballApp/src/app/app.component.html
@@ -58,112 +58,7 @@
 
 <!--Таблица-->
 
-<section class="slice py-5 py-md-6 bg-section-secondary">
-  <div class=container>
-    <div class="row justify-content-center">
-      <div class="col-lg-6 text-center"><h2 class=mb-3>Европейские чемпионаты</h2>
-        <div class="form-group"><label class="form-control-label">Выберите страну</label> <select
-          class="form-control select2-hidden-accessible" data-toggle="select" title="Выберите страну"
-          data-live-search="true" data-live-search-placeholder="Country" data-select2-id="1" tabindex="-1"
-          aria-hidden="true">
-
-          <option data-select2-id="3">Все лиги</option>
-          <option data-select2-id="14"> Англия</option>
-          <option data-select2-id="15">Испания</option>
-          <option data-select2-id="16">Италия</option>
-          <option data-select2-id="17">Германия</option>
-          <option data-select2-id="18">Франция</option>
-          <option data-select2-id="18">Португалия</option>
-          <option data-select2-id="18">Россия</option>
-          <option data-select2-id="18">Нидерланды</option>
-          <option data-select2-id="18">Бельгия</option>
-          <option data-select2-id="18">Австрия</option>
-          <option data-select2-id="18">Украина</option>
-          <option data-select2-id="18">Шотландия</option>
-        </select>
-
-
-
-
-
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid ">
-    <div class="row mt-6 mb-n10 position-relative zindex-100">
-      <div class="col-lg-4 col-sm-6 mt-5">
-        <p><a href="#"><img alt="Image placeholder"
-                            src="assets/img/icons/flags/gb-eng.svg"
-                            style="width:40px; margin-right: 20px">Английская премьер-лига</a></p>
-        <table class="table">
-
-          <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Клуб</th>
-            <th scope="col">И</th>
-            <th scope="col">В</th>
-            <th scope="col">Н</th>
-            <th scope="col">П</th>
-            <th scope="col">О</th>
-          </tr>
-          </thead>
-
-          <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td><img alt="Image placeholder"
-                     src="assets/img/icons/club/mc.png"
-                     style="width:20px; margin-right: 10px; margin-bottom: 5px"> Манчестер сити
-            </td>
-            <td>1</td>
-            <td>2</td>
-            <td>2</td>
-            <td>2</td>
-            <td>2</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td><img alt="Image placeholder"
-                     src="assets/img/icons/club/ce.png"
-                     style="width:20px; margin-right: 10px; margin-bottom: 5px"> Челси
-            </td>
-            <td>1</td>
-            <td>2</td>
-            <td>5</td>
-            <td>2</td>
-            <td>4</td>
-
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td><img alt="Image placeholder"
-                     src="assets/img/icons/club/liver.png"
-                     style="width:20px; margin-right: 10px; margin-bottom: 5px"> Ливерпуль
-            </td>
-            <td>1</td>
-            <td>2</td>
-            <td>4</td>
-            <td>5</td>
-            <td>1</td>
-
-          </tr>
-          </tbody>
-        </table>
-        <button type="button" class="btn btn-outline-primary btn-sm rounded-0">
-          Подробнее
-        </button>
-        <button type="button" class="btn btn-outline-primary btn-sm rounded-0">
-          Матчи
-        </button>
-      </div>
-
-    </div>
-  </div>
-
-
-</section>
+<app-main-section></app-main-section>
 
 
 <!--Таблица-->
